--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
         <h2>email: dmytro.kashchuk@studenti.unitn.it</h2>
     </div>
 
+    <img src="me.png" alt="img" class="img">
+
+    <div class="container">
+
     <h3>Personal information</h3>
     <hr>
     <div class="columns">
@@ -95,7 +99,10 @@
     </div>
 
 </div>
+</div>
+<div class="banner"></div>
 
 </body>
+
 
 </html>
