--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
 
     <title>Dmytro Kashchuk</title>
 
+    <link rel="stylesheet" href="animation.css">
     <link rel="stylesheet" href="style.css">
+    
 </head>
 
 <body>
@@ -19,7 +21,15 @@
         <h2>email: dmytro.kashchuk@studenti.unitn.it</h2>
     </div>
 
-    <img src="me.png" alt="img" class="img">
+
+    <div class="container">
+        <img src="me.png" alt="img" class="img">
+        <br>
+        <br>
+        <p class="line-1 anim-typewriter">Hi everyone, my name is Dmytro, and i'm a web develper and security expert</p>
+        <br>
+    </div>
+
 
     <div class="container">
 
